# social-media-analytics-capstone

./: .gitignore  README.md  pyproject.toml
data/processed/: youtube_video_metadata_clean.csv
data/raw/: youtube_search_metadata.csv  youtube_search_results.csv  youtube_video_metadata.csv
reports/tables/: average_engagement_by_category.csv  summary_statistics.csv  videos_per_category.csv
scripts/: clean_youtube_data.py  collect_youtube_data.py  collect_youtube_metadata.py  social_media_eda.py
