[project]
name = "social-media-analytics-capstone"
version = "0.1.0"
description = "Master's capstone project analyzing factors that influence social media engagement using data collected from the YouTube Data API."
readme = "README.md"
requires-python = ">=3.14"

dependencies = [
    "google-api-python-client",
    "python-dotenv",
    "pandas",
    "numpy",
    "matplotlib",
    "seaborn",
    "scikit-learn",
    "jupyter",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/social_media_analytics"]